correct discussion of params to be about 2 params

--- a/writing/_cogsci2016/habituals-cogsci2016.tex
+++ b/writing/_cogsci2016/habituals-cogsci2016.tex
@@ -515,7 +515,7 @@ When collapsing across items and subjecting the data to a generalized mixed-effe
 %\mht{should I add points from Expt. 2 to left-most scatter, or maybe there is a better plot?}
 
 We use the mean predicted log frequency from Expt.~3a as the input to the speaker $S_2$ model to predict the felicity judgments measured in Expt.~3b.
-We infer the one model parameter using the same analysis approach in Expt.~2. 
+We infer the two model parameters using the same analysis approach in Expt.~2. 
 The model matches the data well ($r^2(63) = 0.91$; Figure \ref{fig:tj3}, right).
 The same model using the past frequency as the object of communication does not match the data at all ($r^2(63) = 0.02$).
 These results suggest that the felicity of habituals is based on an underlying scale of predicted future propensity, not merely the observed frequency in the past.
